2006-05-01  Peter Jones  <pjones@redhat.com>

	* Makefile: don't remove on_ac_power in "make clean"

2006-04-28  Peter Jones  <pjones@redhat.com>

	* Makefile: don't build on_ac_power
	* on_ac_power: add shell version of this
	* on_ac_power.c: no longer needed.

2006-04-28  Peter Jones  <pjones@redhat.com>

	* pm/hooks/05led: Resurrect this
	* pm/hooks/95led: ditto
	* pm/hooks/95ibm_led: remove this; it changes the behavior incorrectly.

2006-04-28  Richard Hughes  <richard@hughsie.com>

	* pm/functions-ati:
	* pm/functions-intel:
	* pm/functions-nvidia:
	Remove these files as we've now agreed that this belongs in HAL, and
	a HAL patch is close to being accepted.

2006-04-28  Richard Hughes  <richard@hughsie.com>

	* pm/hooks/05led: Remove this file as we want the led to turn on at
	the *end* of the hooks stuff. We shouldn't have this and 95led.

	* pm/hooks/95led: rename to 95ibm_led as this is ibm specific.
	Make sure the led blinks at suspend, and turns off when we resume.

2006-04-27  Peter Jones  <pjones@redhat.com>

	* Makefile:
	Remove references to *.app and *.pam
	* *.{app,pam}:
	Kill'em.

2006-04-27  Peter Jones  <pjones@redhat.com>

	* pm/functions:
	Don't stop/start services unless the initscript is executable
	Use /etc/init.d/$name instead of "service", as per LSB.

2006-04-27  Peter Jones  <pjones@redhat.com>

	* pm/functions:
	Add support for /etc/pm/config.d/
	* Makefile:
	Create /etc/pm/config.d/
	* README:
	Add docs about hooks and config files

	* pm-action:
	Set LC_COLLATE=C .

2006-04-27  Richard Hughes  <richard@hughsie.com>

	* pm/functions:
	Remove the video handling logic, as it is moving to HAL.

	* pm/functions-ati:
	* pm/functions-intel:
	* pm/functions-nvidia:
	Add a comment saying that the files are unused. When HAL video stuff
	is completed, they can be removed.

	* pm/hooks/20video:
	Switch to using the HAL methods as discussed.

2006-04-26  Richard Hughes  <richard@hughsie.com>

	* Add README
	* Add AUTHORS
